# web-virtual-table-top

backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 041e37988e7d_users_init.py  915cb2b4b93b_player_and_character_create.py
backend/src/: config.py  database.py
backend/src/logs/: errors.py  handlers.py  logging.py  middleware.py
backend/src/modules/auth/: dependencies.py  jwt.py  router.py  service.py
backend/src/modules/character/: models.py
backend/src/modules/users/: models.py  schemas.py
backend/src/modules/ws/: router.py
backend/src/test/: router.py
backend/utils/: db_mixins.py  enums.py
compose/: docker-compose.yml
compose/nginx/: nginx.conf
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/middleware/: auth.global.ts  redirect.global.ts
frontend/pages/: login.vue  main.vue
frontend/plugins/: api.ts
frontend/stores/: user.ts
